syntax = "proto3";
package rook.rook;

option go_package = "github.com/cmwaters/rook/x/rook/types";

import "gogoproto/gogo.proto";

message MsgMove {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string quantity = 3; 
  string from = 4; 
  string to = 5; 
}

