syntax = "proto3";
package rook.rook;

import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "rook/build.proto";
import "rook/move.proto";


option go_package = "github.com/cmwaters/rook/x/rook/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2
	rpc AllBuild(QueryAllBuildRequest) returns (QueryAllBuildResponse);
	rpc AllMove(QueryAllMoveRequest) returns (QueryAllMoveResponse);
}

// this line is used by starport scaffolding # 3
message QueryAllBuildRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBuildResponse {
	repeated MsgBuild build = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
message QueryAllMoveRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllMoveResponse {
	repeated MsgMove move = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
