syntax = "proto3";
package rook.rook.v1beta1;

option go_package = "github.com/cmwaters/rook/x/rook/types";

import "gogoproto/gogo.proto";

message MsgBuild {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string settlement = 3; 
  string position = 4; 
}

